// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nexus: dynamicOutputMethod CollectionMethod example 1`] = `
Array [
  "/Users/tgriesser/Github/oss/nexus/nexus/tests/schema.graphql",
  "### This file was autogenerated by GraphQL Nexus
### Do not make changes to this file directly


type Cat {
  id: ID!
  name: String!
}

type CatCollection {
  nodes: [Cat!]!
  totalCount: Int!
}

type Query {
  cats(page: Int, perPage: Int): CatCollection!
}
",
]
`;

exports[`nexus: dynamicOutputMethod CollectionMethod example 2`] = `
Array [
  "/Users/tgriesser/Github/oss/nexus/nexus/tests/test-output",
  "/**
 * This file was automatically generated by GraphQL Nexus
 * Do not make changes to this file directly
 */


import { core } from \\"nexus\\"

declare global {
  interface NexusGenCustomOutputMethods<TypeName extends string> {
    collectionField<FieldName extends string>(fieldName: FieldName, opts: {
      type: NexusGenObjectNames | NexusGenInterfaceNames | core.NexusObjectTypeDef<string> | core.NexusInterfaceTypeDef<string>,
      nodes: core.SubFieldResolver<TypeName, FieldName, \\"nodes\\">,
      totalCount: core.SubFieldResolver<TypeName, FieldName, \\"totalCount\\">,
      args?: core.ArgsRecord,
      nullable?: boolean,
      description?: string
    }): void;
  }
}

declare global {
  interface NexusGen extends NexusGenTypes {}
}

export interface NexusGenInputs {
}

export interface NexusGenEnums {
}

export interface NexusGenRootTypes {
  Cat: { // root type
    id: string; // ID!
    name: string; // String!
  }
  CatCollection: { // root type
    nodes: NexusGenRootTypes['Cat'][]; // [Cat!]!
    totalCount: number; // Int!
  }
  Query: {};
  String: string;
  Int: number;
  Float: number;
  Boolean: boolean;
  ID: string;
}

export interface NexusGenAllTypes extends NexusGenRootTypes {
}

export interface NexusGenFieldTypes {
  Cat: { // field return type
    id: string; // ID!
    name: string; // String!
  }
  CatCollection: { // field return type
    nodes: NexusGenRootTypes['Cat'][]; // [Cat!]!
    totalCount: number; // Int!
  }
  Query: { // field return type
    cats: NexusGenRootTypes['CatCollection']; // CatCollection!
  }
}

export interface NexusGenArgTypes {
  Query: {
    cats: { // args
      page?: number | null; // Int
      perPage?: number | null; // Int
    }
  }
}

export interface NexusGenAbstractResolveReturnTypes {
}

export interface NexusGenInheritedFields {}

export type NexusGenObjectNames = \\"Cat\\" | \\"CatCollection\\" | \\"Query\\";

export type NexusGenInputNames = never;

export type NexusGenEnumNames = never;

export type NexusGenInterfaceNames = never;

export type NexusGenScalarNames = \\"Boolean\\" | \\"Float\\" | \\"ID\\" | \\"Int\\" | \\"String\\";

export type NexusGenUnionNames = never;

export interface NexusGenTypes {
  context: any;
  inputTypes: NexusGenInputs;
  rootTypes: NexusGenRootTypes;
  argTypes: NexusGenArgTypes;
  fieldTypes: NexusGenFieldTypes;
  allTypes: NexusGenAllTypes;
  inheritedFields: NexusGenInheritedFields;
  objectNames: NexusGenObjectNames;
  inputNames: NexusGenInputNames;
  enumNames: NexusGenEnumNames;
  interfaceNames: NexusGenInterfaceNames;
  scalarNames: NexusGenScalarNames;
  unionNames: NexusGenUnionNames;
  allInputTypes: NexusGenTypes['inputNames'] | NexusGenTypes['enumNames'] | NexusGenTypes['scalarNames'];
  allOutputTypes: NexusGenTypes['objectNames'] | NexusGenTypes['enumNames'] | NexusGenTypes['unionNames'] | NexusGenTypes['interfaceNames'] | NexusGenTypes['scalarNames'];
  allNamedTypes: NexusGenTypes['allInputTypes'] | NexusGenTypes['allOutputTypes']
  abstractTypes: NexusGenTypes['interfaceNames'] | NexusGenTypes['unionNames'];
  abstractResolveReturn: NexusGenAbstractResolveReturnTypes;
}


declare global {
  interface NexusGenPluginTypeConfig<TypeName extends string> {
  }
  interface NexusGenPluginFieldConfig<TypeName extends string, FieldName extends string> {
  }
  interface NexusGenPluginSchemaConfig {
  }
}",
]
`;

exports[`nexus: dynamicOutputMethod CollectionMethod example 3`] = `
Object {
  "data": Object {
    "cats": Object {
      "nodes": Array [
        Object {
          "id": "Cat:1",
          "name": "Felix",
        },
        Object {
          "id": "Cat:2",
          "name": "Booker",
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`nexus: dynamicOutputMethod RelayConnectionMethod example 1`] = `
Array [
  "/Users/tgriesser/Github/oss/nexus/nexus/tests/schema.graphql",
  "### This file was autogenerated by GraphQL Nexus
### Do not make changes to this file directly


type Cat {
  id: ID!
  name: String!
}

type CatEdge {
  cursor: ID!
  node: Cat!
}

type CatRelayConnection {
  edges: [CatEdge!]!
  pageInfo: ConnectionPageInfo!
}

type ConnectionPageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
}

type Query {
  cats(after: String, before: String, first: Int, last: Int): CatRelayConnection!
}
",
]
`;

exports[`nexus: dynamicOutputMethod RelayConnectionMethod example 2`] = `
Array [
  "/Users/tgriesser/Github/oss/nexus/nexus/tests/test-output.ts",
  "/**
 * This file was automatically generated by GraphQL Nexus
 * Do not make changes to this file directly
 */


import { core } from \\"nexus\\"

declare global {
  interface NexusGenCustomOutputMethods<TypeName extends string> {
    relayConnectionField
    <FieldName extends string>(fieldName: FieldName, opts: {
      type: NexusGenObjectNames | NexusGenInterfaceNames | core.NexusObjectTypeDef<string> | core.NexusInterfaceTypeDef<string>,
      edges: core.SubFieldResolver<TypeName, FieldName, \\"edges\\">,
      pageInfo: core.SubFieldResolver<TypeName, FieldName, \\"pageInfo\\">,
      args?: Record<string, core.NexusArgDef<string>>,
      nullable?: boolean,
      description?: string
    }): void
  
  }
}

declare global {
  interface NexusGen extends NexusGenTypes {}
}

export interface NexusGenInputs {
}

export interface NexusGenEnums {
}

export interface NexusGenRootTypes {
  Cat: { // root type
    id: string; // ID!
    name: string; // String!
  }
  CatEdge: { // root type
    cursor: string; // ID!
    node: NexusGenRootTypes['Cat']; // Cat!
  }
  CatRelayConnection: { // root type
    edges: NexusGenRootTypes['CatEdge'][]; // [CatEdge!]!
    pageInfo: NexusGenRootTypes['ConnectionPageInfo']; // ConnectionPageInfo!
  }
  ConnectionPageInfo: { // root type
    hasNextPage: boolean; // Boolean!
    hasPreviousPage: boolean; // Boolean!
  }
  Query: {};
  String: string;
  Int: number;
  Float: number;
  Boolean: boolean;
  ID: string;
}

export interface NexusGenAllTypes extends NexusGenRootTypes {
}

export interface NexusGenFieldTypes {
  Cat: { // field return type
    id: string; // ID!
    name: string; // String!
  }
  CatEdge: { // field return type
    cursor: string; // ID!
    node: NexusGenRootTypes['Cat']; // Cat!
  }
  CatRelayConnection: { // field return type
    edges: NexusGenRootTypes['CatEdge'][]; // [CatEdge!]!
    pageInfo: NexusGenRootTypes['ConnectionPageInfo']; // ConnectionPageInfo!
  }
  ConnectionPageInfo: { // field return type
    hasNextPage: boolean; // Boolean!
    hasPreviousPage: boolean; // Boolean!
  }
  Query: { // field return type
    cats: NexusGenRootTypes['CatRelayConnection']; // CatRelayConnection!
  }
}

export interface NexusGenArgTypes {
  Query: {
    cats: { // args
      after?: string | null; // String
      before?: string | null; // String
      first?: number | null; // Int
      last?: number | null; // Int
    }
  }
}

export interface NexusGenAbstractResolveReturnTypes {
}

export interface NexusGenInheritedFields {}

export type NexusGenObjectNames = \\"Cat\\" | \\"CatEdge\\" | \\"CatRelayConnection\\" | \\"ConnectionPageInfo\\" | \\"Query\\";

export type NexusGenInputNames = never;

export type NexusGenEnumNames = never;

export type NexusGenInterfaceNames = never;

export type NexusGenScalarNames = \\"Boolean\\" | \\"Float\\" | \\"ID\\" | \\"Int\\" | \\"String\\";

export type NexusGenUnionNames = never;

export interface NexusGenTypes {
  context: any;
  inputTypes: NexusGenInputs;
  rootTypes: NexusGenRootTypes;
  argTypes: NexusGenArgTypes;
  fieldTypes: NexusGenFieldTypes;
  allTypes: NexusGenAllTypes;
  inheritedFields: NexusGenInheritedFields;
  objectNames: NexusGenObjectNames;
  inputNames: NexusGenInputNames;
  enumNames: NexusGenEnumNames;
  interfaceNames: NexusGenInterfaceNames;
  scalarNames: NexusGenScalarNames;
  unionNames: NexusGenUnionNames;
  allInputTypes: NexusGenTypes['inputNames'] | NexusGenTypes['enumNames'] | NexusGenTypes['scalarNames'];
  allOutputTypes: NexusGenTypes['objectNames'] | NexusGenTypes['enumNames'] | NexusGenTypes['unionNames'] | NexusGenTypes['interfaceNames'] | NexusGenTypes['scalarNames'];
  allNamedTypes: NexusGenTypes['allInputTypes'] | NexusGenTypes['allOutputTypes']
  abstractTypes: NexusGenTypes['interfaceNames'] | NexusGenTypes['unionNames'];
  abstractResolveReturn: NexusGenAbstractResolveReturnTypes;
}


declare global {
  interface NexusGenPluginTypeConfig<TypeName extends string> {
  }
  interface NexusGenPluginFieldConfig<TypeName extends string, FieldName extends string> {
  }
  interface NexusGenPluginSchemaConfig {
  }
}",
]
`;

exports[`nexus: dynamicOutputMethod RelayConnectionMethod example 3`] = `
Object {
  "data": Object {
    "cats": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "Cat:1",
            "name": "Felix",
          },
        },
        Object {
          "node": Object {
            "id": "Cat:2",
            "name": "Booker",
          },
        },
      ],
      "pageInfo": Object {
        "hasNextPage": false,
        "hasPreviousPage": false,
      },
    },
  },
}
`;
